--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Reminder</string>
     <string name="action_settings">Settings</string>
+    <string name="action_new_template">Create a new Template</string>
+    <string name="txt_duration">Duration</string>
+    <string name="txt_reminder_name">Name</string>
 </resources>
