--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
     <string name="app_name">Reminder</string>
     <string name="action_settings">Settings</string>
     <string name="action_new_template">Create a new Template</string>
+    <string name="action_list_templates">List Reminders</string>
     <string name="txt_duration">Duration</string>
     <string name="txt_reminder_name">Name</string>
+    <string name="txtSaveTemplateError">Couldn\'t save template</string>
+    <string name="txtSaveTemplateSuccess">Template saved succesfully</string>
+    <string name="txtLoadTemplateError">Couldn\'t load templates</string>
+    <string name="txtInvalidDurationInput">Invalid duration input</string>
 </resources>
