Click Listener for RecyclerView
Changed duration from MilliSeconds to Minutes
Click Listener is instantiating alarms
Intent is passing Reminder to AlarmReceiver
Reminder is implementing Parceable

Fixes #9
Fixes #5

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="msgLoadTemplateError">Couldn\'t load templates</string>
     <string name="msgInvalidDurationInput">Invalid duration input</string>
     <string name="msgInvalidNameInput">Invalid name input</string>
+    <string name="msgNotificationText">The time has come</string>
 </resources>
