--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,14 @@
     <string name="action_list_reminder">List Reminder</string>
     <string name="txt_duration">Duration</string>
     <string name="txt_reminder_name">Name</string>
-    <string name="msgSaveTemplateError">Could not save template</string>
-    <string name="msgSaveTemplateSuccess">Template saved successfully</string>
+    <string name="msgSaveTemplateError">Could not save template %1$s</string>
+    <string name="msgSaveTemplatesError">Could not save templates</string>
+    <string name="msgSaveTemplateSuccess">Template %1$s saved successfully</string>
     <string name="msgLoadTemplateError">Could not load templates</string>
-    <string name="msgInvalidDurationInput">Invalid duration input</string>
+    <string name="msgInvalidDurationInput">Invalid duration input %1$s</string>
     <string name="msgInvalidNameInput">Invalid name input</string>
-    <string name="msgCancelReminder">Cancel Reminder</string>
+    <string name="msgCancelReminder">Canceled Reminder %1$s</string>
+    <string name="msgHoldToCancel">Click long to cancel</string>
     <string name="action_mode_template_delete">Delete</string>
     <string name="action_mode_template_edit">Edit</string>
 </resources>
